# c-compiler

./: .clang-format  .gitignore  CMakeLists.txt  test_runner.cc
.github/workflows/: main.yaml
doc/: TODO.md
include/: AstNode.hpp  DataType.hpp  Stmt.hpp  allocator.hpp  assem.hpp  ast.hpp  asttraits.hpp  driver.hpp  lower_ir.hpp  parser.hpp  qa_ir.hpp  qa_x86.hpp  st.hpp  syntax_utils.hpp  token.hpp  translate.hpp
include/ast/: AstNode.hpp  DataType.hpp  Stmt.hpp  ast.hpp  asttraits.hpp
include/compiler/: assem.hpp  lower_ir.hpp  qa_ir.hpp  qa_x86.hpp  translate.hpp
include/lexer/: token.hpp
include/parser/: parser.hpp  st.hpp  syntax_utils.hpp
scripts/: build.sh  check_format.sh  clean.sh  format.sh  run.sh  test.sh
src/: AstNode.cpp  Stmt.cpp  allocator.cpp  assem.cpp  ast.cpp  codegen.cpp  driver.cpp  lexer.cpp  lower_ir.cpp  main.cpp  parser.cpp  qa_ir.cpp  qa_x86.cpp  qa_x86.hpp  st.cpp  syntax_utils.cpp  translate.cpp
src/ast/: AstNode.cpp  DataType.cpp  Stmt.cpp  ast.cpp
src/compiler/: allocator.cpp  assem.cpp  codegen.cpp  lower_ir.cpp  qa_ir.cpp  qa_x86.cpp  translate.cpp
src/lexer/: lexer.cpp  syntax_utils.cpp
src/parser/: parser.cpp  st.cpp
tests/sources/: IfElse.c  array_getter_after_passed.c  array_getter_after_passed_ptr_arth.c  array_getter_after_passed_simple.c  array_getter_basic.c  array_no_mutation.c  array_return_last.c  basic_if_gt_statement.c  basic_if_statement.c  complicated_if.c  float_arr.c  float_basic.c  float_basic_2.c  float_greater_negative.c  float_greater_positive.c  float_gt_val_var_neg.c  float_gt_val_var_pos.c  (+52 more)
(+8 files in other folders)
